Linking the contact section with Email using emailJS.

--- a/src/components/Slideshow/Slideshow.css
+++ b/src/components/Slideshow/Slideshow.css
@@ -4,3 +4,9 @@
   font-weight: 2800;
   font-style: normal;
 }
+
+.slideshow-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
